Fixed right-aligned images.

--- a/src/scss/plandocument.scss
+++ b/src/scss/plandocument.scss
@@ -20,7 +20,7 @@ figure.plandoc-image {
     }
     &.plandoc-image-right {
       clear: both;
-      float: left;
+      float: right;
       margin-left: 1em;
       width: 50%;
     }
